--- a/roles/openvpn/tasks/gdns.yml
+++ b/roles/openvpn/tasks/gdns.yml
@@ -1,4 +1,4 @@
-# This task configures google public DNS servers for slave
+# Set Google DNS
 - name: set google public DNS servers in /etc/resolv.conf and enable immutable flag
   shell: echo -e 'nameserver 8.8.8.8\nnameserver 8.8.4.4' > /etc/resolv.conf; chattr +i /etc/resolv.conf
   ignore_errors: yes
